--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -26,8 +26,8 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-    - name: Checkout
-     uses: actions/checkout@master
+   #- name: Checkout
+   # uses: actions/checkout@master
 
     - name: Initialization environment
       env:
