--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -19,15 +19,15 @@ on:
 #  schedule:
 #    - cron: 0 8 * * 5
   watch:
-  types: [started]
+    types: [started]
 
 jobs:
   build:
     runs-on: ubuntu-18.04
 
     steps:
-   #- name: Checkout
-   # uses: actions/checkout@master
+    - name: Checkout
+      uses: actions/checkout@master
 
     - name: Initialization environment
       env:
